[gd_scene load_steps=6 format=2]

[ext_resource path="res://Themes/StandardTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/CommandLog.gd" type="Script" id=2]
[ext_resource path="res://Scripts/ScriptBox.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ControlSync.gd" type="Script" id=4]
[ext_resource path="res://Fonts/CodeFont.tres" type="DynamicFont" id=5]

[node name="MainUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="BaseBar" type="ColorRect" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
theme = ExtResource( 1 )
color = Color( 0.556863, 0.556863, 0.556863, 1 )

[node name="MenuButton" type="Button" parent="BaseBar"]
anchor_right = 0.1
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Menu"

[node name="HelpButton" type="Button" parent="BaseBar"]
anchor_left = 0.1
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Help Codex"

[node name="ConditionsButton" type="Button" parent="BaseBar"]
anchor_left = 0.3
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Mission Conditions"

[node name="ShapeButton" type="Button" parent="BaseBar"]
anchor_left = 0.5
anchor_right = 0.7
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Create Shape"

[node name="TestButton" type="Button" parent="BaseBar"]
anchor_left = 0.7
anchor_right = 0.85
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Test Script"

[node name="RunButton" type="Button" parent="BaseBar"]
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = ExtResource( 1 )
text = "Run Script"

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 0.9
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 1 )

[node name="CommandLog" type="RichTextLabel" parent="."]
anchor_left = 0.6
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.9
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ScriptBox" type="TextEdit" parent="."]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 0.7
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 5 )
script = ExtResource( 3 )

[node name="DialogLayer" type="CanvasLayer" parent="."]

[node name="CompletionDialog" type="WindowDialog" parent="DialogLayer"]
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
theme = ExtResource( 1 )

[node name="CompletionDialogText" type="RichTextLabel" parent="DialogLayer/CompletionDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
theme = ExtResource( 1 )

[node name="ConditionsDialog" type="WindowDialog" parent="DialogLayer"]
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
theme = ExtResource( 1 )

[node name="ConditionsDialogText" type="RichTextLabel" parent="DialogLayer/ConditionsDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
theme = ExtResource( 1 )

[node name="HelpDialog" type="WindowDialog" parent="DialogLayer"]
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
theme = ExtResource( 1 )

[node name="HelpDialogText" type="RichTextLabel" parent="DialogLayer/HelpDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[b]bold[/b]
[i]italics[/i]"
text = "bold
italics"

[connection signal="pressed" from="BaseBar/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="BaseBar/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="BaseBar/ConditionsButton" to="." method="_on_ConditionsButton_pressed"]
[connection signal="pressed" from="BaseBar/ShapeButton" to="ScriptBox" method="_on_ShapeButton_pressed"]
[connection signal="pressed" from="BaseBar/TestButton" to="ScriptBox" method="_on_TestButton_pressed"]
[connection signal="pressed" from="BaseBar/RunButton" to="ScriptBox" method="_on_RunButton_pressed"]
[connection signal="composition_from_pointer" from="ScriptBox" to="." method="_on_ScriptBox_composition_from_pointer"]
[connection signal="composition_from_shape" from="ScriptBox" to="." method="_on_ScriptBox_composition_from_shape"]
[connection signal="composition_from_variable" from="ScriptBox" to="." method="_on_ScriptBox_composition_from_variable"]
[connection signal="cut_from_pointer" from="ScriptBox" to="." method="_on_ScriptBox_cut_from_pointer"]
[connection signal="cut_from_shape" from="ScriptBox" to="." method="_on_ScriptBox_cut_from_shape"]
[connection signal="cut_from_variable" from="ScriptBox" to="." method="_on_ScriptBox_cut_from_variable"]
[connection signal="has_at_pointer" from="ScriptBox" to="." method="_on_ScriptBox_has_at_pointer"]
[connection signal="has_at_variable" from="ScriptBox" to="." method="_on_ScriptBox_has_at_variable"]
[connection signal="pointer_at_address" from="ScriptBox" to="." method="_on_ScriptBox_pointer_at_address"]
[connection signal="pointer_at_pointer" from="ScriptBox" to="." method="_on_ScriptBox_pointer_at_pointer"]
[connection signal="run_full_script" from="ScriptBox" to="." method="_on_ScriptBox_run_full_script"]
[connection signal="run_test_script" from="ScriptBox" to="." method="_on_ScriptBox_run_test_script"]
[connection signal="set_pointer_to_pointer" from="ScriptBox" to="." method="_on_ScriptBox_set_pointer_to_pointer"]
[connection signal="set_pointer_to_shape" from="ScriptBox" to="." method="_on_ScriptBox_set_pointer_to_shape"]
[connection signal="set_pointer_to_variable" from="ScriptBox" to="." method="_on_ScriptBox_set_pointer_to_variable"]
[connection signal="set_variable_to_pointer" from="ScriptBox" to="." method="_on_ScriptBox_set_variable_to_pointer"]
[connection signal="set_variable_to_shape" from="ScriptBox" to="." method="_on_ScriptBox_set_variable_to_shape"]
[connection signal="set_variable_to_variable" from="ScriptBox" to="." method="_on_ScriptBox_set_variable_to_variable"]
[connection signal="popup_hide" from="DialogLayer/CompletionDialog" to="." method="_on_CompletionDialog_popup_hide"]
